# AVX-sort-merge-joins

./: LICENSE.txt  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
doc/: Doxyfile
lib/check-0.9.12/checkmk/test/name_enc/: ._cmd
lib/intel-pcm-2.35/: Makefile
lib/intel-pcm-2.35/freegetopt/: getopt.c
scripts/: cardinality.sh  multiwaymerge-bench.sh  partitioning-bench.sh  scalesize.sh  sort-bench.sh  tput-scalability.sh
src/: Makefile  Makefile.am  Makefile.in  bench_merge  bench_multiwaymerge  bench_partitioning  bench_sort  main.c  sortmergejoins  tputbench  types.h
src/.deps/: bench_merge-mergebench.Po  bench_merge-testutil.Po  bench_multiwaymerge-avx_multiwaymerge.Po  bench_multiwaymerge-multiwaymergebench.Po  bench_multiwaymerge-scalar_multiwaymerge.Po  bench_multiwaymerge-testutil.Po  bench_partitioning-cpu_mapping.Po  bench_partitioning-generator.Po  bench_partitioning-genzipf.Po  bench_partitioning-memalloc.Po  bench_partitioning-partition.Po  bench_partitioning-partitioningbench.Po  bench_sort-avx_multiwaymerge.Po  bench_sort-avxsort.Po  bench_sort-avxsort_multiway.Po  bench_sort-cpu_mapping.Po  bench_sort-generator.Po  bench_sort-genzipf.Po  bench_sort-merge.Po  bench_sort-sortbench.Po  bench_sort-testutil.Po  sortmergejoins-avx_multiwaymerge.Po  sortmergejoins-avxsort.Po  sortmergejoins-cpu_mapping.Po  sortmergejoins-generator.Po  sortmergejoins-genzipf.Po  sortmergejoins-joincommon.Po  sortmergejoins-main.Po  sortmergejoins-memalloc.Po  sortmergejoins-merge.Po  sortmergejoins-numa_shuffle.Po  sortmergejoins-partition.Po  sortmergejoins-scalar_multiwaymerge.Po  sortmergejoins-scalarsort.Po  sortmergejoins-sortmergejoin_mpsm.Po  sortmergejoins-sortmergejoin_multipass.Po  sortmergejoins-sortmergejoin_multiway.Po  tputbench-avx_multiwaymerge.Po  tputbench-avxsort.Po  tputbench-cpu_mapping.Po  (+9 more)
src/avxsort/: avxcommon.h  avxsort.c  avxsort.h  avxsort_core.h  avxsort_multiway.c  avxsort_multiway.h
src/bench/: mergebench.c  multiwaymergebench.c  partitioningbench.c  sortbench.c  tputbench.c
src/datagen/: generator.h
src/joins/: joincommon.c  joincommon.h  sortmergejoin_mpsm.c  sortmergejoin_mpsm.h  sortmergejoin_multipass.c  sortmergejoin_multipass.h  sortmergejoin_multiway.c  sortmergejoin_multiway.h
src/merge/: avx_multiwaymerge.c  avx_multiwaymerge.h  merge.c  merge.h  scalar_multiwaymerge.c  scalar_multiwaymerge.h
src/partition/: partition.c  partition.h
src/scalarsort/: scalarsort.h
src/util/: barrier.h  cpu_mapping.c  cpu_mapping.h  lock.h  numa_shuffle.c  numa_shuffle.h  perf_counters.c  perf_counters.h
tests/: Makefile  Makefile.am  Makefile.in  check_avxsort.c  check_merge.c  check_partitioning.c  check_scalarsort.c  testutil.c  testutil.h
